[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hans-client"
version = "7.2.0"
authors = [
  { name="Pablo del Hoyo Abad", email="pablo.hoyo@alu.uclm.es" },
]
description = "A python client which interacts with the HANS platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "numpy",
  "paho-mqtt<2.0",
  "Pillow",
  "pyzmq"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
